practice/zivasera/catalog/deployment-catalog-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-catalog
  namespace: dev
  labels:
    app: app-catalog
    name: app-catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-catalog
  template:
    metadata:
      labels:
        app: app-catalog
    spec:
      containers:
        - name: app-catalog
          image: cpsarathe/demo-ecom-repo:catalog
          ports:
            - containerPort: 8080
              name: mysql-catalog
          volumeMounts:
            - mountPath: /logs/catalog
              subPath: catalog
              name: catalog-logs
      volumes:
        - name: catalog-logs
          persistentVolumeClaim:
            claimName: pvc-logs-catalog-app
